# AI-phone-Detector

./: AI_Phone_Detector_PRO_macOS.py  CHANGELOG.md  CONTRIBUTING.md  INSTALL_MAC.sh  LICENSE  README.md  RELEASE_CHECKLIST.md  export_coreml_model.py  pyproject.toml  requirements-macos.txt
